--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   shared_preferences: ^2.2.3
   dio: ^5.4.3+1
   flutter_dotenv: ^5.1.0
+  flutter_secure_storage: ^9.2.2
+  jwt_decoder: ^2.0.1
+  flutter_native_splash: ^2.4.0
 
 dev_dependencies:
   flutter_test:
